Added product icon to main screen.
Added a product icon and content description to main screen to add some style and application branding. This logos file can be found in @drawables.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">Object Tracker</string>
 
+    <!-- Content Descriptions -->
+    <string name="product_icon_content_description">Product Icon in an ImageView</string>
+
     <!-- Button Texts -->
     <string name="start_tracking">Start\nTracking</string>
     <string name="preferences">Preferences</string>
