Added icons to the buttons in main screen, created new layout folders.
Improved the style of the main screen by adding visual icons. Still work in progress.
I added 2 new layout directories (layout-sw600dp for tablets, layout-sw600dp-land for tablets in landscape mode). When viewing the app on a tablet mode, the layout in layout-sp600dp (or layout-sw600dp-land) will be inflated instead. This allows me to define custom drawable sizes, font sizes, margin sizes and more, to keep the UI fluent among different screen sizes. This also allows me to develop a fluent UI for Lenovo Phab 2 Pro (which isn't classed as a tablet by Google), and Google Tango tablet (which, obviously, is classed as a tablet by Google). Both of these have Project Tango enabled, so creating new layout folders to separate phone and tablet design allows me to plan fluent UI for future Google Tango devices.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,8 @@
     <string name="product_icon_content_description">Product Icon in an ImageView</string>
 
     <!-- Button Texts -->
-    <string name="start_tracking">Start\nTracking</string>
+    <string name="start_tracking">Start Tracking</string>
     <string name="preferences">Preferences</string>
-    <string name="view_recordings">View\nRecordings</string>
+    <string name="view_recordings">View Recordings</string>
 
 </resources>
