--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="preferences">Preferences</string>
     <string name="view_recordings">View Recordings</string>
 
+    <!-- Camera UI Text -->
+    <string name="manual_tracking_ui">Manual Tracking</string>
+
 </resources>
