--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,13 @@
 
     <!-- Camera UI Text -->
     <string name="manual_tracking_ui">Manual Tracking</string>
+    <string name="freeze_button">Freeze Camera</string>
+    <string name="timestamp">00:00:00</string>
+    <string name="flashlight_auto">Auto</string>
+
+    <!-- Flash popup menu -->
+    <string name="flash_popup_on">On</string>
+    <string name="flash_popup_off">Off</string>
+    <string name="flash_popup_auto">Auto</string>
 
 </resources>
