--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="view_recordings">View Recordings</string>
 
     <!-- Camera UI Text -->
-    <string name="manual_tracking_ui">Manual Tracking</string>
+    <string name="manual_mode">Manual Mode</string>
     <string name="freeze_camera">Freeze Camera</string>
     <string name="unfreeze_camera">Unfreeze Camera</string>
     <string name="timestamp">00:00:00</string>
@@ -20,5 +20,6 @@
     <string name="flash_popup_on">On</string>
     <string name="flash_popup_off">Off</string>
     <string name="flash_popup_auto">Auto</string>
+    <string name="set_color">Set Color</string>
 
 </resources>
