--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,5 @@
     <string name="freeze_disabled">Live</string>
 
     <string name="set_color">Color</string>
-    <string name="manual_tracking">Manual Tracking</string>
+    <string name="manual_tracking">Mode</string>
 </resources>
