Added menu options for tracking mode.
Tracking mode is now set through a popup menu which is bought up after clicking the "Mode" button. Interface looks much cleaner.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,8 @@
     <string name="freeze_disabled">Live</string>
 
     <string name="set_color">Color</string>
-    <string name="tracking_mode">Mode</string>
+    <string name="mode">Mode</string>
+    <string name="manual_tracking">Manual Tracking</string>
+    <string name="automatic_tracking">Automatic Tracking</string>
+    <string name="help">Help</string>
 </resources>
