--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,7 +46,7 @@
         uses a method that searches the entire image frame for the template specified by the user.
         Upon finding a closest match, a bounding box will be drawn around the location of the detected
         object*.
-        \n\n <b>To select a template for template matching</b>:
+        \n\n<b>To select a template for template matching</b>:
         \n\n 1) Click the <i>MODE</i> button and select <i>Automatic Tracking</i> (Manual Tracking is default).
         \n 2) Ensure that the object you wish to track is clearly displayed on screen (with no blur).
         \n 3) Press the <i>Live</i> <img src="@drawable/freeze_button"/> button to freeze the camera preview. This allows you to select the template
@@ -54,8 +54,16 @@
         \n 4) Once the camera preview is frozen, hold your finger and drag a box around the object you wish to track.
         \n 5) Once you are happy with the selection process, press the <i>Freeze</i> button to restart the camera preview.
         \n 6) Upon pressing the freeze button, the template will be saved, and automatic tracking will start.
-        \n Note: if the template selection rectangle is difficult to see, press the <i>Freeze</i> button to change the
-        overlay colour.
+        \n Note: if the template selection rectangle is difficult to see, press the <i>Color</i> button to change the overlay color
+
+        \n\n<b>Updating the template:</b>
+        \n\nTo update the template, simply click on the location of the new template. The location
+        that you click on will act as the center point of the new template. Note that the new template
+        will be of identical size to the initial template you selected.
+        \n\nIf the newly selected template is not within range of the screen size, then a notification will
+        appear, notifying the user that manual template correction has failed. It is advised to keep the object
+        you wish to track in the center of the screen, for optimal results.
+
 
         \n\n\n\n\n*You can change the circle overlay color by tapping the icon labelled \"Color\".
     </string>
