[ISSUE #2] Fixed bug where app crashed if template was not initialized.
If template was not initialized and user pressed the freeze button to start recording, app would crash. I added a check to ensure the minimum template selected is atleast 15px x 15px, and if not, then user is notified that template is too small. This fixes the crash.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,4 +75,5 @@
     <string name="freeze_preview_toast_string1">To select a template, firstly focus the camera on the object,
         and then press the</string>
     <string name="freeze_preview_toast_string2"> button</string>
+    <string name="tracking_mode_text">Mode: Manual</string>
 </resources>
