--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="help_dialog_manual_tracking">Manual Tracking</string>
     <string name="help_dialog_automatic_tracking">Automatic Tracking</string>
     <string name="help_dialog_matching_methods">Matching Methods</string>
+    <string name="help_dialog_tips_and_tricks">Tips and Tricks</string>
     <string name="help_dialog_manual_tracking_desc">
         Manual tracking is the simplest type of tracking mode this app offers. Simply select the
         "Manual Tracking" option by clicking on the <i>MODE</i> button. After pressing the record button, you
@@ -59,7 +60,7 @@
         \n 4) Once the camera preview is frozen, hold your finger and drag a box around the object you wish to track.
         \n 5) Once you are happy with the selection process, press the <i>Freeze</i> button to restart the camera preview.
         \n 6) Upon pressing the freeze button, the template will be saved, and automatic tracking will start.
-        \n Note: if the template selection rectangle is difficult to see, press the <i>Color</i> button to change the overlay color
+        \n\nNote: if the template selection rectangle is difficult to see, press the <i>Color</i> button to change the overlay color
 
         \n\n<b>Updating the template:</b>
         \n\nTo update the template, simply click on the location of the new template. The location
@@ -68,6 +69,15 @@
         \n\nIf the newly selected template is not within range of the screen size, then a notification will
         appear, notifying the user that manual template correction has failed. It is advised to keep the object
         you wish to track in the center of the screen, for optimal results.
+
+
+        \n\n<b>Cancelling the initialization:</b>
+        \n\nThere may be times where you need to cancel the template initialisation process. For example,
+        if you pressed the "Freeze" button and the resultant frame is blurry, you should cancel the initialization and
+        start again.
+        \n To cancel the initialization, once the process has started, a "CANCEL INITIALIZATION" button
+        will appear on the top edge of the screen. If you press this, the preview will unfreeze, and
+        you will be given the opportunity to reinitialize the whole process, or switch modes.
 
 
         \n\n\n\n\n*You can change the circle overlay color by tapping the icon labelled \"Color\". Note that
@@ -99,14 +109,27 @@
         \nThis matching method involves the least computation, and as a result, is the fastest.\n\n
 
         <b>SQDIFF Normed</b>
-        \nDescription here\n\n
+        \nDescription here\n\n\n\n
+
+    </string>
+
+    <string name = "help_dialog_tips_and_tricks_desc">
+        There are various hardware parameters that determine how well this application will run on
+        your phone. Newer phones benefit from more powerful cameras and CPUs, meaning that the recorded
+        video is more crisp, and automatic tracking is faster to process. However, if you have an older
+        device, you can still benefit from this app.
+
+        <b>Increasing Performance</b>
+        \n1) Exit from other applications so that your phone has more free RAM.
+        \n2) Make use of your cameras autofocus before selecting a template for template matching
+        \n3) Make use of the zoom feature to track smaller objects
 
 
-
-
-
-        \n\n\n\n\n\n
-
+        \n\n<b>General Tips</b>
+        \n1) This application is optimised to record in landscape mode, so it is recommended that the user
+        record in landscape whenever possible.
+        \n2)&#8320;
+        \n3)&#8320;
 
     </string>
 
