Added sensor code to access gyroscope/accelerometer.
All sensor framework has been coded. Just need to research on polling times, and then store the sensor data to a data file periodically. Also added a method to Utilities that allows for the creation of this sensor data file.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -142,4 +142,5 @@
     <string name="ccorr">CCORR</string>
     <string name="square_diff_normed">SQDIFF Normed</string>
     <string name="square_difference">SQDIFF</string>
+    <string name="cancel_initialization">Cancel Initialization</string>
 </resources>
