Now reading from sharedPreferences to set default tracking/matching method.
Also fixed some bugs with UI elements not being updated when activity was paused. I am now calling releaseMediaRecorder() in TrackingActivity.onPause(), and releaseMediaRecorder() sets the UI icons by calling reconfigureUI method.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,9 @@
     <string name="help">Help</string>
     <string name="match_method">Method</string>
     <string name="cancel_initialization">Cancel Initialization</string>
-    <string name="tracking_mode_text">Mode: Manual</string>
+
+    <string name="manual_mode">Mode: Manual</string>
+    <string name="automatic_mode">Mode: Automatic</string>
 
 
     <!-- Flash popup menu -->
