--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,11 @@
     <string name="start_tracking">Start Tracking</string>
     <string name="preferences">Preferences</string>
     <string name="view_recordings">View Recordings</string>
+    <string name="debug">Debug Sensors</string>
+    <string name="debug_text">Debug mode allows you to debug sensors used within this application. Specify the sensor you wish to debug,
+        the polling rate of the sensor, and the number of times you wish to poll the sensor. Readings will then be exported into a yml file.</string>
+
+
 
     <!-- Camera UI Text -->
     <string name="timestamp">0:00:00</string>
@@ -161,7 +166,6 @@
     </string>
 
 
-
     <!-- Strings related to settings activity-->
     <string name="title_activity_settings">Settings</string>
     <string name="general_settings_title">General Settings</string>
@@ -218,7 +222,6 @@
         <item>4</item>
         <item>5</item>
     </string-array>
-
 
 
 </resources>
