Added option in debug activity to select polling frequency

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -224,4 +224,17 @@
     </string-array>
 
 
+    <string-array name="debug_polling_frequency_entries">
+        <item>Fastest</item>
+        <item>Normal</item>
+        <item>Game</item>
+        <item>UI</item>
+        <item>User-defined (microseconds)</item>
+    </string-array>
+
+
 </resources>
+
+
+
+
