--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,10 +8,8 @@
     <string name="start_tracking">Start Tracking</string>
     <string name="preferences">Preferences</string>
     <string name="view_recordings">View Recordings</string>
-    <string name="debug">Debug Sensors</string>
     <string name="debug_text">Debug mode allows you to debug sensors used within this application. Specify the sensor you wish to debug,
         the polling rate of the sensor, and the number of times you wish to poll the sensor. Readings will then be exported into a yml file.</string>
-
 
 
     <!-- Camera UI Text -->
@@ -191,6 +189,15 @@
 
     <string name="pref_manual_tracking_overlay_title">Manual Tracking overlay size</string>
     <string name="pref_manual_tracking_overlay_summary">Set the size of the circle (in device-pixels) of the manual tracking overlay.</string>
+
+
+    <!-- Main screen menu text-->
+    <string name="debug_mode">Debug Mode</string>
+    <string name="about">About</string>
+    <string name="email_about">Contact ftahir192@gmail.com for support</string>
+    <string name="developed_by_about">Developed by Faizan Tahir</string>
+    <string name="object_tracker_about">Object Tracker</string>
+    <string name="open_source_about">Object Tracker is built using various open-source software.</string>
 
 
     <string-array name="pref_tracking_mode_entries">
