--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -243,7 +243,7 @@
         <item>Normal</item>
         <item>Game</item>
         <item>UI</item>
-        <item>User-defined (microseconds)</item>
+        <item>User-defined (milliseconds)</item>
     </string-array>
 
 
